wip: renamed cesm_manip to chunked_regrid

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,4 +52,4 @@ script:
   - source activate test-full
   - mpirun -n 2 python -c "from ocgis.test import run_mpi_nodata; run_mpi_nodata(verbose=True)"
 
-  - ocli cesm_manip --help
+  - ocli chunked_regrid --help
